--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                   </div>
                   <button class="generate-btn">Generate Password</button>
                 </div>
+                <div class="footer">
+                  created by Suryansh Shakya
+                </div>
      
     
 
