--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <button class="generate-btn">Generate Password</button>
                 </div>
                 <div class="footer">
-                  created by Suryansh Shakya
+                  © Suryansh Shakya
                 </div>
      
     
