--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
                 <span style="--i:13"></span>
                 <span style="--i:26"></span>
                 <span style="--i:13"></span>
+                <span style="--i:26"></span>
+                <span style="--i:13"></span>
+                <span style="--i:11"></span>
+                <span style="--i:12"></span>
+                <span style="--i:24"></span>
+                <span style="--i:10"></span>
+                <span style="--i:14"></span>
+                <span style="--i:23"></span>
+                <span style="--i:18"></span>
               
               </div>
               <div class="container">
